[package]
name = "hbcai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lazy_static = "1.0"
mwbot = "0.3.2"
parsoid = "0.6.4"
regex = "1.0"
time = "0.3"
tokio = {version = "1.0", features = ["full"]}
